# IR_2025S

./: .gitignore  Cleaned_Dense_Retrieval_Example.ipynb  Dense_Retrieval_Example_SCHAMBECK_Fabian.ipynb  IR_Project_RADOVANOV_Angelina-SCHAMBECK_Fabian.ipynb  Inverted_Index_Exercise.ipynb  Inverted_Index_Exercise_SCHAMBECK_Fabian.ipynb  Inverted_index_exercise.ipynb  Kopie von Dense Retrieval - Example.ipynb  README.md  denseindex.ipynb  environment.yml  pyproject.toml  requirements.txt
IR_project/: IR_project.py  README.md  main.py  requirements.txt
IR_project/data/: 03_Harry_Potter_and_the_Prisoner_of_Azkaban.txt  07_Harry_Potter_and_the_Deathly_Hallows.txt
IR_project/notebooks/: data_inspection.ipynb
IR_project/scripts/: 01_extract_data.py  03_build_boolean_index.py  04_query_bm25.py  extract_data.py  preprocess_data.py
IR_project/src/: dataset_utils.py  load_books.py  preprocess.py  preprocessing.py  preprocessing_BM25.py
data/processed/: eval_data.json
data/raw/: 01_Harry_Potter_and_the_Sorcerers_Stone.txt  02_Harry_Potter_and_the_Chamber_of_Secrets.txt  06_Harry_Potter_and_the_Half-Blood_Prince.txt
lecture/: Dense_Retrieval_Example.ipynb  Inverted_Index_Exercise_SCHAMBECK_Fabian.ipynb
pipeline/: 01_extract_data.py  02_preprocess_data.py  03_build_boolean_index.py  04_query_bm25.py  05_load_index.py  06_dense_index.py  07_dense_query.py  08_hybrid.py  09_evaluate_pipeline.py  QueryRetrievalfromFAISS.ipynb  denseindex.ipynb
src/IR_2025S/: dense_retriever.py  hybrid_retriever.py  indexer.py  load_books.py  retriever.py
tests/: main.py  test.py
(+15 files in other folders)
